# rust-website

./: Cargo.toml
backend/: Cargo.toml
backend/src/: database_manager.rs  main.rs
common/: Cargo.toml
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/components/: markup.rs
ui/src/pages/: home.rs  mod.rs  stories.rs  story.rs  story_root.rs
ui/src/pages/html/: stories.html
ui/src/utils/: cardmanager.rs  createcards.rs  mod.rs
